--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
-    "next": "12.0.4",
+    "next": "^12.0.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.4"
+    "eslint": "^8.2.0",
+    "eslint-config-next": "^12.0.4"
   }
 }
