--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@material-ui/core": "^4.12.3",
     "bcryptjs": "^2.4.3",
     "js-cookie": "^3.0.1",
+    "mongoose": "^6.0.13",
     "next": "^12.0.4",
+    "next-connect": "^0.11.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
