--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI="mongodb+srv://dandeng:TestMongoDb6367@cluster0.nu9xs.mongodb.net/Estore?retryWrites=true&w=majority"
 NODE_ENV="development"
+JWT_SECRET="DAN_STORE_JWT_SECRET"
