--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "^12.0.4",
     "next-connect": "^0.11.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hook-form": "^7.20.2"
   },
   "devDependencies": {
     "eslint": "^8.2.0",
