--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "notistack": "^2.0.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.20.2"
+    "react-hook-form": "^7.20.2",
+    "react-redux": "^7.2.6"
   },
   "devDependencies": {
     "eslint": "^8.2.0",
